<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VoiceJournal</string>
    <string name="mes_edit_save">Saved</string>
    <string name="mes_edit_del">Deleted</string>
    <string name="hint_search">Please input the word to search. </string>
    <string name="mes_share">Text is shared. </string>
    <string name="btn_back">Cancel</string>
    <string name="pref_title">Settings</string>
    <string name="mes_pref_bg_set">The background image was set up. </string>
    <string name="mes_pref_bg_reset">The background was returned to the initial state. </string>
    <string name="mes_prompt">It records.</string>
    <string name="no_record">There is no record.</string>
    
    <string name="Text_Share">Text share</string>
    <string name="Deletion">Deletion</string>
    
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    
    <string name="Speech_Recognition">Speech</string>
    <string name="Location">Location</string>
    <string name="Search">Search</string>

    <string name="Nothing">Nothing</string>
    <string name="CreationDate">CreationDate</string>
    <string name="UpdatedDate">UpdatedDate</string>
    
    <!-- Dialog -->
    <string name="dlg_btn_ok">OK</string>
    <string name="dlg_btn_cancel">Cancel</string>
    
    <string name="dlg_title">Please</string>
    <string name="dlg_mes_001">Please validate GPS.</string>
    
    <string name="dlg_selected_title">Please choose.</string>
    
    <string name="dlg_del_title">Deletion</string>
    <string name="dlg_del_mes_001">Is a selection item deleted?</string>
    
    <!-- Menu -->
    <string name="menu_add_title">Add</string>
    <string name="menu_pref_title">Settings</string>
    <string name="menu_cancel_title">Cancel</string>
    
    <!-- Settings -->
    <string name="pref_background_title">Background change</string>
    <string name="pref_background_select_title">Background image selection</string>
    <string name="pref_background_select">pref_background_select</string>
    <string name="pref_background_select_summary">A background image is chosen.</string>
    <string name="pref_background_reset_title">Background reset</string>
    <string name="pref_background_reset">pref_background_reset</string>
    <string name="pref_background_reset_summary">A background is returned to an initial state.</string>
    
    <string name="pref_line_title">Pause line change</string>
    <string name="pref_line_select_title">Pause line selection</string>
    <string name="pref_line_select">pref_line_select</string>
    
    <!-- ErrMes -->
    <string name="err_mes_001">The speech recognition compatible tool is not installed.</string>
    <string name="err_mes_002">Position information acquisition went wrong.</string>
    <string name="err_mes_003">Preservation of edit went wrong.</string>
    <string name="err_mes_004">It was not able to share.</string>
    
    <!-- LineID -->
    <string name="line_default">Default</string>
    <string name="line_black">Black</string>
    <string name="line_blue">Blue</string>
    <string name="line_brown">Brown</string>
    <string name="line_gray">Gray</string>
    <string name="line_green">Green</string>
    <string name="line_lightblue">LightBlue</string>
    <string name="line_orange">Orange</string>
    <string name="line_pink">Pink</string>
    <string name="line_purple">Purple</string>
    <string name="line_red">Red</string>
    <string name="line_white">White</string>
    <string name="line_yellow">Yellow</string>
    
    <!-- LineValue -->
    <string name="value_default">default</string>
    <string name="value_black">black</string>
    <string name="value_blue">blue</string>
    <string name="value_brown">brown</string>
    <string name="value_gray">gray</string>
    <string name="value_green">green</string>
    <string name="value_lightblue">lightblue</string>
    <string name="value_orange">orange</string>
    <string name="value_pink">pink</string>
    <string name="value_purple">purple</string>
    <string name="value_red">red</string>
    <string name="value_white">white</string>
    <string name="value_yellow">yellow</string>
</resources>
